--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,45 @@ ul li .link:hover::before {
     margin-top: 50px;
   }
 }
+
+.presentations {
+  background-color: rgba(217, 4, 41, 0.49);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.presentations p {
+  text-align: justify;
+  font-weight: 700;
+}
+
+.presentations h1 {
+  font-weight: 700;
+}
+
+.presentations button {
+  background-color: rgb(217, 4, 41);
+  width: 10rem;
+  height: 3rem;
+  border-style: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  margin-top: 30px;
+}
+
+.presentations button:hover {
+  background-color: white;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(217, 4, 41);
+  color:rgb(1, 0, 15);
+}
 /**************************** HOME COMPONENT END ***************************************/
 
 /*********************** FOOTER START ***************************/
@@ -276,6 +315,11 @@ ul li .link:hover::before {
   
   .footer-contact {
     margin-top: 25px;
+  }
+
+  .presentations {
+    display: flex;
+    flex-direction: column;
   }
 
 }
