--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
 
 .nav-elem {
   background-color: rgb(217, 4, 41);
-  /* align-items: center; */
   position: absolute;
   height: 100%;
   width: 100%;
@@ -195,6 +194,7 @@ ul li .link:hover::before {
 .presentations {
   background-color: rgba(217, 4, 41, 0.49);
   display: flex;
+  border-radius:  10% 50%;
   align-items: center;
   justify-content: center;
   padding-right: 20px;
@@ -206,6 +206,12 @@ ul li .link:hover::before {
 .presentations p {
   text-align: justify;
   font-weight: 700;
+}
+
+.presentations .image2 {
+  display: flex;
+  justify-content: center;
+  width: 40vw;
 }
 
 .presentations h1 {
@@ -221,6 +227,7 @@ ul li .link:hover::before {
   color: white;
   font-weight: 700;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .presentations button:hover {
@@ -230,6 +237,69 @@ ul li .link:hover::before {
   border-color: rgb(217, 4, 41);
   color:rgb(1, 0, 15);
 }
+
+.services {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.services .service-img-container {
+  width: 100%;
+}
+
+.item {
+  /* relative position in order to position de .service-description relative to it */
+  position: relative;
+  box-shadow: -9px -6px 12px 0px rgba(0,0,0,0.22),
+              0px 15px 12px 0px rgba(0,0,0,0.22),
+              -6px 3px 107px -35px rgba(0,0,0,0.3),
+              0px 15px 12px 0px rgba(0,0,0,0.22),
+              0px 15px 12px 0px rgba(0,0,0,0.22),
+              0px 15px 12px 0px rgba(0,0,0,0.22);
+}
+
+.item .service-description {
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 4px;
+  border-color: rgb(217, 4, 41);
+  visibility: hidden;
+  transition: transform 0.4s ease-in-out;
+  transform: translateY(100%);
+}
+
+.item:hover .service-description {
+  visibility: visible;
+  transform: translateY(0%)
+}
+
+.item h5 {
+  color: rgb(255, 255, 255)
+}
+
+.services-title {
+  background-color: aqua;
+  font-family: 'Pacifico', cursive;
+  text-align: center;
+  margin-top: 50px;
+  border-radius: 50px 20px;
+  width: 200px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
 /**************************** HOME COMPONENT END ***************************************/
 
 /*********************** FOOTER START ***************************/
@@ -322,6 +392,9 @@ ul li .link:hover::before {
     flex-direction: column;
   }
 
+  .presentations .image2 {
+    width: 50vw;
+  }
 }
 
 .error {
