--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,7 @@ ul li .link:hover::before {
 
 .item {
   /* relative position in order to position de .service-description relative to it */
-  background-color: rgb(217, 4, 41);
+  background-color: rgba(217, 4, 41, 0.49);
   margin: 20px;
   position: relative;
   box-shadow: -9px -6px 12px 0px rgba(0,0,0,0.22),
@@ -278,10 +278,10 @@ ul li .link:hover::before {
   left: 0;
   right: 0;
   padding: 10px;
-  border-style: none;
+  border-style: solid;
   border-radius: 10px;
-  /* border-width: 4px;
-  border-color: linear-gradient(218deg, rgba(253,29,29,1) 47%, rgba(252,176,69,1) 81%, rgba(131,58,180,1) 100%);; */
+  border-width: 4px;
+  border-color: rgba(217, 4, 41);
   visibility: hidden;
   transition: transform 0.4s ease-in-out;
   transform: translateY(100%);
@@ -294,11 +294,13 @@ ul li .link:hover::before {
 
 .service-description h3, p {
   text-align: center;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 .item .item-title {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .services-title {
