--- a/src/App.css
+++ b/src/App.css
@@ -408,10 +408,11 @@ ul li .link:hover::before {
 
 /**************************** EXPERTISE COMPONENT START***********************************/
 .expertise-header {
-  background: rgba(255, 118, 1, 1.0);
-  background: linear-gradient(225deg, rgba(255, 118, 1, 1.0), rgba(176, 3, 3, 1.0));  padding: 2rem;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: 'Pacifico', cursive;
+  margin: 50px;
 }
 /**************************** EXPERTISE COMPONENT END****************************************/
 
