--- a/src/App.css
+++ b/src/App.css
@@ -415,14 +415,17 @@ ul li .link:hover::before {
   margin: 50px;
 }
 /**************************** EXPERTISE COMPONENT END****************************************/
+
 /**************************** SPINNER COMPONENT START****************************************/
 .loader-container {
   background-color: rgb(0, 0, 0);
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .loader {
   width: 48px;
   height: 48px;
@@ -564,6 +567,7 @@ ul li .link:hover::before {
   color: white;
   font-family: 'Pacifico'
 }
+
 @media (max-width:600px) {
 
   .errorContainer {
