--- a/src/App.css
+++ b/src/App.css
@@ -450,7 +450,23 @@ ul li .link:hover::before {
     transform:  translateX(150%) rotate(360deg);
   }
 }/**************************** SPINNER COMPONENT END****************************************/
+.swiper {
+  width: 50%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
 
 /**************************** HOME COMPONENT END ***************************************/
 
