--- a/src/App.css
+++ b/src/App.css
@@ -450,12 +450,28 @@ ul li .link:hover::before {
     transform:  translateX(150%) rotate(360deg);
   }
 }/**************************** SPINNER COMPONENT END****************************************/
-.swiper {
-  width: 50%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+.swiper-container h1 {
+  font-family: 'Pacifico', cursive;
+  font-size: 4rem;
+  font-size: 5rem;
+  text-align: center;
 }
 
+.swiper {
+  background-color: rgb(211, 10, 10);
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.slider-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
 .swiper-slide {
   background-position: center;
   background-size: cover;
@@ -463,9 +479,33 @@ ul li .link:hover::before {
   height: 300px;
 }
 
+
+.slider-p {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: 500;
+  font-style: italic;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width: 70%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-left: 2rem;
+  border-width: 3px;
+  border-style: solid;
+  border-color: rgb(218, 136, 136);
+}
+
 .swiper-slide img {
   display: block;
-  width: 100%;
+  width: 20%;
+  height: 20%;
+  border-radius: 50%;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
 
 /**************************** HOME COMPONENT END ***************************************/
