--- a/src/App.css
+++ b/src/App.css
@@ -374,18 +374,19 @@ ul li .link:hover::before {
 }
 
 .newsletter {
-  background: rgba(255, 118, 1, 1.0);
-  background: linear-gradient(225deg, rgba(255, 118, 1, 1.0), rgba(176, 3, 3, 1.0));  padding: 2rem;
+  background-color: rgba(217, 4, 41, 0.49);
   border-radius: 5px;
   border-style: none;
   line-height: 2rem;
-  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: rgb(0, 0, 0);
+  padding: 20px;
 }
 
 .newsletter button {
   width: 50px;
-  border-style: double;
-  border-color: rgb(217, 4, 41);
+  border-style: none;
+  background-color: rgb(217, 4, 41);
 }
 
 .newsletter .checkbox {
@@ -402,7 +403,7 @@ ul li .link:hover::before {
 }
 
 .newsletter .email-input {
-  border-radius: .5rem;
+  border-radius: 0;
   outline: none;
 }
 
@@ -491,9 +492,9 @@ ul li .link:hover::before {
   font-weight: 500;
   font-style: italic;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  width: 60%;
+  width: 80%;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   color: white;
 }
 
@@ -502,7 +503,7 @@ ul li .link:hover::before {
   width: 20%;
   height: 20%;
   border-radius: 50%;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -618,6 +619,16 @@ ul li .link:hover::before {
   .digital {
     display: flex;
     flex-direction: column;
+  }
+
+  .swiper-slide img {
+    width: 50%;
+    height: 50%;
+  }
+
+  .slider-p {
+    width: 100%;
+    font-size: 1rem;
   }
 }
 
