the navbar component was updated in app.css

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   background-color: 'D90429';
   justify-content: space-between;
   align-items: center;
+  height: 4rem;
 }
 
 .logoFont .logoLink {
