--- a/src/App.css
+++ b/src/App.css
@@ -419,6 +419,15 @@ ul li .link:hover::before {
 
 .expertise-header img {
   width: 100%;
+  height: 100vh;
+}
+
+.expertise-header h1 {
+  position: absolute;
+  text-align: center;
+  /* top: 0;
+  bottom: 0; */
+  z-index: 1;
 }
 
 /**************************** EXPERTISE COMPONENT END****************************************/
