--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,12 @@ ul li .link:hover::before {
   justify-content: center;
   font-family: 'Pacifico', cursive;
   padding: 50px;
+  background: #fe8c00;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #f83600, #fe8c00);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #f83600, #fe8c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
+
 
 .expertise-header img {
   width: 100%;
