font-family changed for the expertises component

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@900&display=swap');
+
 
 .logoFont {
   background-color: rgb(217, 4, 41);
@@ -413,12 +415,12 @@ ul li .link:hover::before {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Cinzel', serif;
   padding: 50px;
   background: #fe8c00;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #f83600, #fe8c00);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #f83600, #fe8c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  height: 50vh;
 }
 
 
