--- a/src/App.css
+++ b/src/App.css
@@ -420,20 +420,53 @@ ul li .link:hover::before {
   background: #fe8c00;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #f83600, #fe8c00);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #f83600, #fe8c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  height: 50vh;
+  height: 100vh;
 }
 
+.arrow {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, 50%);
+  cursor: pointer;
+}
 
-.expertise-header img {
-  width: 100%;
-  height: 100vh;
+.arrow span {
+  display: block;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-bottom: 5px solid rgb(226, 7, 7);
+  border-right: 5px solid rgb(216, 9, 9);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+@keyframes animate {
+  0% {
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+  }
 }
 
 .expertise-header h1 {
   position: absolute;
   text-align: center;
-  /* top: 0;
-  bottom: 0; */
   z-index: 1;
 }
 
