--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik+Iso&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@900&display=swap');
-
 
 .logoFont {
   background-color: rgb(217, 4, 41);
@@ -27,6 +25,7 @@
   padding-right: 30px;
   font-size: 2rem;
   color: white;
+  cursor: pointer;
 }
 
 .nav-elem {
@@ -412,23 +411,33 @@ ul li .link:hover::before {
 
 /**************************** EXPERTISE COMPONENT START***********************************/
 .expertise-header {
-  /* display: flex;
+  display: flex;
   align-items:center;
-  justify-content: center; */
-  font-family: 'Cinzel', serif;
+  justify-content: center;
   background-color: black;
-  width: 100%;
-
 }
 
 .expertise-header img {
-  object-fit: cover;
+  width: 100%;
+  height: 100vh;
   opacity: .4;
 }
 
-.arrow {
+.expertise-header .expertise-text {
+  padding: 3rem;
   position: absolute;
-  bottom: 10%;
+  top: 20%;
+}
+
+.expertise-header h1 {
+  font-family: 'Pacifico', cursive;
+  color: white;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.arrow {
+  margin-top: 50px;
   left: 50%;
   transform: translate(50%, 50%);
   cursor: pointer;
@@ -438,8 +447,8 @@ ul li .link:hover::before {
   display: block;
   width: 2.5vw;
   height: 2.5vw;
-  border-bottom: 5px solid rgb(255, 255, 255);
-  border-right: 5px solid rgb(255, 255, 255);
+  border-bottom: 5px solid rgb(217, 4, 41);
+  border-right: 5px solid rgb(217, 4, 41);
   transform: rotate(45deg);
   margin: -10px;
   animation: animate 2s infinite;
@@ -465,13 +474,6 @@ ul li .link:hover::before {
       opacity: 0;
       transform: rotate(45deg) translate(20px, 20px);
   }
-}
-
-.expertise-header h1 {
-  color: white;
-  text-align: justify;
-  font-size: 3rem;
-  /* z-index: 1; */
 }
 
 /**************************** EXPERTISE COMPONENT END****************************************/
