--- a/src/App.css
+++ b/src/App.css
@@ -413,6 +413,7 @@ ul li .link:hover::before {
 .expertise-header {
   display: flex;
   align-items:center;
+  flex-direction: column;
   justify-content: center;
   background-color: black;
 }
@@ -438,8 +439,8 @@ ul li .link:hover::before {
 
 .arrow {
   margin-top: 50px;
+  position: absolute;
   left: 50%;
-  transform: translate(50%, 50%);
   cursor: pointer;
 }
 
@@ -476,6 +477,13 @@ ul li .link:hover::before {
   }
 }
 
+.expertise-intro {
+  background-color: red;
+}
+
+.expertise-intro h1 {
+  margin-top: 20px
+}
 /**************************** EXPERTISE COMPONENT END****************************************/
 
 /**************************** SPINNER COMPONENT START****************************************/
