--- a/src/App.css
+++ b/src/App.css
@@ -478,12 +478,36 @@ ul li .link:hover::before {
 }
 
 .expertise-intro {
-  background-color: red;
+  background-color: rgba(217, 4, 41, 0.49);
+  padding: 30px;
+  text-align: center;
 }
 
 .expertise-intro h1 {
-  margin-top: 20px
+  margin-top: 20px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.expertise-intro button {
+  margin-top: 30px;
+  border-style: none;
+  width: 250px;
+  height: 50px;
+  border-radius: 3rem;
+  background-color: rgb(217, 4, 41);
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+.expertise-intro button:hover {
+  border: rgb(217, 4, 41) solid 3px;
+  color:rgb(0, 0, 0);
+  background-color: white;
+  transition: background-color 1s ease-in-out;
+}
+
+
 /**************************** EXPERTISE COMPONENT END****************************************/
 
 /**************************** SPINNER COMPONENT START****************************************/
