--- a/src/App.css
+++ b/src/App.css
@@ -480,12 +480,20 @@ ul li .link:hover::before {
 .expertise-intro {
   background-color: rgba(217, 4, 41, 0.49);
   padding: 30px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
 }
 
 .expertise-intro h1 {
   margin-top: 20px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.expertise-intro h4 {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-top: 20px;
 }
 
 .expertise-intro button {
@@ -509,7 +517,31 @@ ul li .link:hover::before {
   font-family: 'Pacifico', cursive;
 }
 
+.expertise-title {
+  text-align: center;
+  margin-top: 60px; margin-bottom: 30px;
+  font-family: 'Pacifico', cursive;
+}
 
+.expertise-title h1 {
+  font-size: 5rem;
+}
+
+.expertise-details {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 2rem;
+}
+.expertise-details img {
+  width: 40%;
+  height: 50vh;
+}
+
+.expertise-details .container-img-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /**************************** EXPERTISE COMPONENT END****************************************/
 
 /**************************** SPINNER COMPONENT START****************************************/
