--- a/src/App.css
+++ b/src/App.css
@@ -542,6 +542,41 @@ ul li .link:hover::before {
   justify-content: center;
   align-items: center;
 }
+
+.expertise-details .expertise-single-text {
+  background-color: green;
+  width: 50%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.expertise-details .expertise-single-text h2 {
+  font-weight: 700;
+}
+.expertise-details .expertise-single-text p {
+  text-align: justify;
+  font-size: 1.3rem;
+}
+
+.expertise-details .expertise-single-text button {
+  background-color: rgb(217, 4, 41);
+  width: 250px;
+  height: 50px;
+  border-style: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.expertise-details .expertise-single-text button:hover {
+  background-color: white;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(217, 4, 41);
+  color:rgb(1, 0, 15);
+}
 /**************************** EXPERTISE COMPONENT END****************************************/
 
 /**************************** SPINNER COMPONENT START****************************************/
@@ -756,6 +791,88 @@ ul li .link:hover::before {
     width: 100%;
     font-size: 1rem;
   }
+  
+  .expertise-header img {
+    width: 100%;
+    height: 60vh;
+    opacity: .4;
+  }
+  
+  .expertise-header .expertise-text {
+    padding: 1rem;
+    position: absolute;
+    top: 20%;
+  }
+  
+  .expertise-header h1 {
+    font-family: 'Pacifico', cursive;
+    color: white;
+    text-align: center;
+    font-size: 3rem;
+  }
+  
+  .expertise-intro {
+    background-color: rgba(217, 4, 41, 0.49);
+    padding: 20px;
+    text-align: center;
+     
+  }
+  .arrow {
+    margin-top: 50px;
+    position: absolute;
+    left: 50%;
+    cursor: pointer;
+  }
+                
+  .expertise-title h1 {
+    font-size: 3rem;
+  }
+  
+  .expertise-details img {
+    width: 100%;
+    height: 50vh;
+  }
+
+  .expertise-details .container-img-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .expertise-details .expertise-single-text {
+    background-color: green;
+    width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .expertise-header h1 {
+    font-family: 'Pacifico', cursive;
+    color: white;
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .arrow span {
+    width: 4.5vw;
+    height: 4.5vw;
+  }
+
+  .expertise-intro h1 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 360px) {
+  .expertise-details .expertise-single-text button {
+    width: 10rem;
+    height: 50px;
+    font-weight: 700;
+  }
+  
 }
 
 .error {
