--- a/src/App.css
+++ b/src/App.css
@@ -364,7 +364,8 @@ ul li .link:hover::before {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 2.5rem;
   padding: 2rem;
-  background-color: rgba(217, 4, 41, 0.49);
+  /* background-color: rgba(217, 4, 41, 0.49); */
+  border: rgb(217, 4, 41) solid 3px;
   border-radius: 2rem;
   text-align: justify;
 }
@@ -685,15 +686,62 @@ ul li .link:hover::before {
   margin-bottom: 40px;
   padding-left: 2rem;
   padding-right: 2rem;
+  background-color: yellow;
+}
+
+.about .about-header h1 {
+  font-family: 'Pacifico', cursive;
+  font-size: 4rem;
 }
 
 .about .about-body {
+  position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(217, 4, 41, .5);
 }
+
+.about .about-body .text {
+  position: absolute;
+  top: 0;
+  text-align: justify;
+  font-size: 1.5rem;
+}
+
 .about .about-body img {
   width: 50%;
   height: 60vh;
 }
+
+.about .about-body button {
+  width: 13rem;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  border-style: none;
+  background-color: rgb(217, 4, 41);
+  color: white;
+  font-weight: 700;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border-radius: 10px;
+}
+
+.about .about-body button:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border: rgb(217, 4, 41) solid 4px;
+  font-weight: 700;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border-radius: 10px;
+}
+
+
+
+/* .about .about-body div {
+  padding-left: 2rem;
+  padding-right: 2rem;
+} */
 /**************************** ABOUT SECTION END ***************************************/
 
 /**************************** HOME COMPONENT END ***************************************/
