--- a/src/App.css
+++ b/src/App.css
@@ -686,7 +686,6 @@ ul li .link:hover::before {
   margin-bottom: 40px;
   padding-left: 2rem;
   padding-right: 2rem;
-  background-color: yellow;
 }
 
 .about .about-header h1 {
@@ -695,7 +694,6 @@ ul li .link:hover::before {
 }
 
 .about .about-body {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -715,9 +713,7 @@ ul li .link:hover::before {
 .about .about-body button {
   width: 15rem;
   height: 4rem;
-  margin-top: 4rem;
-  position: absolute;
-  bottom: 0;
+  margin-top: 2rem;
   border-style: none;
   background-color: rgb(217, 4, 41);
   color: white;
@@ -914,7 +910,12 @@ ul li .link:hover::before {
   }
 
   .about .about-body img {
-    width: 90%
+    width: 90%;
+    margin-bottom: 2rem;
+  }
+
+  .about .about-body button {
+    margin-bottom: 2rem;
   }
 }
 
