Input tag in contact component updated when selected

--- a/src/App.css
+++ b/src/App.css
@@ -781,6 +781,14 @@ ul li .link:hover::before {
   width: 100%;
   padding: .6rem;
   margin-bottom: 3rem;
+  outline: none;
+  border: rgb(217, 4, 41) solid 4px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.form .contact-form input:focus {
+  border-color:rgba(217, 4, 41, .5);
 }
 
 .form .contact-form textarea {
@@ -788,6 +796,14 @@ ul li .link:hover::before {
   padding: .6rem;
   min-height: 30vh;
   margin-bottom: 3rem;
+  outline: none;
+  border: rgb(217, 4, 41) solid 4px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.form .contact-form textarea.about {
+  border-color:rgba(217, 4, 41, .5);
 }
 
 .form .contact-form input[type='submit'] {
