--- a/src/App.css
+++ b/src/App.css
@@ -835,6 +835,37 @@ ul li .link:hover::before {
   margin-top: 5rem;
 }
 
+@media (max-width: 1000px) {
+  .contact-section {
+    padding: .5rem;
+  }
+
+  .contact-section .form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+
+  .contact-section .form .contact-form {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .contact-section .contact-address {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+@media (max-width: 410px) {
+  /* FontAwesomeIcon {
+    padding-right: 1rem;
+  } */
+}
 /*********************** CONTACT COMPONENT END ***************************/
 
 
