--- a/src/App.css
+++ b/src/App.css
@@ -814,6 +814,13 @@ ul li .link:hover::before {
   border-radius: 20px;
 }
 
+.form .contact-form input[type='submit']:hover {
+  background-color: rgb(255, 255, 255);
+  border:rgba(217, 4, 41, 0.49) solid 3px;
+  color: rgb(0, 0, 0);
+  transition: .5s ease-in-out;
+}
+
 .contact-section .contact-address {
   border: rgba(217, 4, 41, .5) solid 1rem;
   width: 50%;
